# flobot

./: .env  .gitignore  Cargo.toml  Makefile  README.md  bot.service  build.rs  docker-compose.yml  flobot.env.example  go.mod  mattermost.config.json  prod.sh  run.sh
cmd/bot/: main.go
flobot/: Cargo.toml
flobot-lib/: Cargo.toml
flobot-lib/src/: client.rs  conf.rs  handler.rs  instance.rs  lib.rs  middleware.rs  models.rs  task.rs  tempo.rs
flobot-mattermost/: Cargo.toml
flobot-mattermost/src/: client.rs  models.rs  websocket.rs
flobot/src/: main.rs
flobot/src/lib/: lib.rs  sms.rs  werewolf_game.rs
flobot/src/lib/db/: mod.rs
flobot/src/lib/db/sqlite/: edits.rs  sms.rs  trigger.rs
gobot/: go.sum  run.sh
gobot/cmd/bot/: main.go
gobot/pkg/conf/: conf.go
gobot/pkg/handlers/: avis.go  emmerde.go
gobot/pkg/instance/mattermost/: helpers.go
gobot/pkg/middlewares/: security.go
gobot/pkg/store/: interface.go  json.go
integration/: bot.service  flobot.sh
legacy.gobot/: Makefile
legacy.gobot/cmd/bot/: main.go
legacy.gobot/pkg/handlers/: hypercon.go
legacy.gobot/pkg/helpers/: init.go
legacy.gobot/pkg/instance/mattermost/: post.go
legacy.gobot/pkg/middlewares/: security.go
migrations/2020-03-21-161402_trigger/: up.sql
migrations/2020-03-29-220000_trigger/: down.sql  up.sql
migrations/2020-04-04-193458_edits/: down.sql  up.sql
migrations/2020-04-06-212558_blague/: down.sql  up.sql
migrations/2021-09-14-184321_sms/: down.sql  up.sql
pkg/handlers/: avis.go  console.go  disbonjour.go  emmerde.go  hypercon.go  parrot.go  prog.go  triggered.go  werewolf.go
pkg/helpers/: post.go
pkg/instance/: errors.go  instance.go  interface.go  mattermost.go
pkg/instance/mattermost/: chan.go  channel.go  client.go  mattermost.go  me.go
pkg/middlewares/: security.go
pkg/store/: json.go  json_test.go
robot/: Cargo.toml  run.sh
robot/src/: main.rs
robot/src/lib/: lib.rs
robot/src/lib/client/: mod.rs
robot/src/lib/client/mattermost/: mod.rs
robot/src/lib/conf/: mod.rs
robot/src/lib/handlers/: mod.rs
robot/src/lib/instance/: mod.rs
robot/src/lib/middleware/: mod.rs
robot/src/lib/models/: mod.rs
robot/src/lib/models/mattermost/: mod.rs
signal-libc/: Cargo.toml
signal-libc/examples/: signal.rs
signal-libc/src/: signal.rs
src/: main.rs
src/lib/: client.rs  conf.rs  instance.rs  joke.rs  lib.rs  middleware.rs  models.rs  pinterest.rs  schema.rs  task.rs  weather.rs  werewolf.rs
src/lib/client/: mod.rs
src/lib/client/mattermost/: mod.rs
src/lib/conf/: mod.rs
src/lib/db/: mod.rs  models.rs  schema.rs  sqlite.rs  tempo.rs
src/lib/db/remote/: blague.rs  mod.rs
src/lib/db/sqlite/: edits.rs  joke.rs  mod.rs  sms.rs  sqlite_blague.rs  sqlite_edits.rs  sqlite_sms.rs  sqlite_trigger.rs  trigger.rs
src/lib/handlers/: blague.rs  edits.rs  mod.rs  sms.rs  trigger.rs  ww.rs
src/lib/instance/: mod.rs
src/lib/mattermost/: client.rs  mod.rs  models.rs  websocket.rs
src/lib/middleware/: mod.rs
src/lib/models/: mod.rs
src/lib/models/db/: mod.rs
src/lib/models/mattermost/: mod.rs
src/lib/pinterest/: mod.rs
src/lib/task/: mod.rs
