[package]
name = "flobot"
version = "0.2.2"
authors = ["Florent Peterschmitt <florent@peterschmitt.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "flobot"
path = "src/lib/lib.rs"

[features]
default = ["sqlite"]
sqlite = []
postgres = []

[dependencies]
diesel = { version = "1.4", features = ["sqlite"] }
diesel_migrations = { version="1.4", features= ["sqlite"]}
ws = {version = "*", features = ["nativetls"]}
dotenv = "*"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
crossbeam = "0.7"
r2d2 = "*"
r2d2_sqlite = "*"
regex = "*"
reqwest = { version = "*", features = ["blocking", "json"] }
rand = "*"
uuid = { version = "*", features = ["v4"] }