[package]
name = "flobot"
version = "0.4.1"
authors = ["Florent Peterschmitt <florent@peterschmitt.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "flobot"
path = "src/lib/lib.rs"

[features]
default = ["sqlite"]
sqlite = []
postgres = []

[dependencies]
chrono = "0.4"
diesel = { version = "1.4", features = ["sqlite"] }
diesel_migrations = { version="1.4", features= ["sqlite"]}
ws = {version = "0.9", features = ["nativetls"]}
dotenv = "0.15"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
crossbeam = "0.7"
r2d2 = "0.8"
r2d2_sqlite = "0.18"
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "json", "gzip"] }
rand = "0.8"
uuid = { version = "0.8", features = ["v4"] }
