[package]
name = "flobot"
version = "0.6.0"
authors = ["Florent Peterschmitt <florent@peterschmitt.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "flobot"
path = "src/lib/lib.rs"

[features]
default = ["sqlite"]
sqlite = []

[dependencies]
signal-libc = { path = "./signal-libc" }
flobot-lib = { path = "./flobot-lib" }
flobot-mattermost = { path = "./flobot-mattermost" }
base64 = "0.13"
chrono = "0.4"
diesel = { version = "1.4", features = ["sqlite"] }
diesel_migrations = { version="1.4", features= ["sqlite"]}
dotenv = "0.15"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
r2d2 = "0.8"
r2d2_sqlite = "0.18"
regex = "1.5"
reqwest = { version = "0.11", features = ["blocking", "json", "gzip"] }
rand = "0.8"
url = "2.2"
uuid = { version = "0.8", features = ["v4"] }
#simple-server = "0"
#http = "*"
