[package]
name = "flobot-mattermost"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
flobot-lib = { path = "../flobot-lib" }
reqwest = "0.11"
serde = "1.0"
serde_json = "1.0"
uuid = "0.8"
ws = {version = "0.9", features = ["nativetls"]}